# teste_global_tech

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  entrypoint.sh  requirements.txt
backend/core/: settings.py  urls.py
backend/pessoas/: admin.py  exceptions.py  urls.py
backend/pessoas/controllers/: __init__.py  pessoa_controller.py
backend/pessoas/dtos/: __init__.py  pessoa_dto.py
backend/pessoas/migrations/: 0001_initial.py
backend/pessoas/models/: __init__.py  pessoa.py
backend/pessoas/serializers/: __init__.py  pessoa_serializer.py
backend/pessoas/services/: __init__.py  pessoa_service.py
backend/pessoas/tasks/: __init__.py  pessoa_task.py
frontend/: Dockerfile  README.md  angular.json
frontend/frontend/: package-lock.json
frontend/frontend/src/app/models/: api-error.model.ts  pessoa.model.ts
frontend/frontend/src/app/services/: pessoa.service.ts
frontend/src/app/: app.routes.ts
frontend/src/app/components/peso-ideal-modal/: peso-ideal-modal.component.css  peso-ideal-modal.component.html  peso-ideal-modal.component.ts
frontend/src/app/components/pessoa-form/: pessoa-form.component.css  pessoa-form.component.html  pessoa-form.component.ts
frontend/src/app/components/pessoa-page/: pessoa-page.component.css  pessoa-page.component.html  pessoa-page.component.ts
frontend/src/app/components/pessoa-search/: pessoa-search.component.css  pessoa-search.component.html  pessoa-search.component.ts
frontend/src/app/directives/: cpf-mask.directive.ts
